--- a/community.html
+++ b/community.html
@@ -49,12 +49,36 @@
       <p>
       On this page, you’ll find links to communities and resources for those affected by hyperacusis, noxacusis, middle ear myoclonus (MEM), tonic tensor tympani syndrome (TTTS), and tinnitus. These include online support groups, educational websites, and other helpful tools to connect, learn, and find guidance.
       </p>
+
+      <div class="page-break" aria-hidden="true"></div>
+      <h1>Discord</h1>
       <p>
-      <a class="link" href="https://discord.gg/TwqVrAQq" target="_blank" rel="noopener noreferrer">Hyperacusis Support Discord Server</a>
+      <a class="link" href="https://discord.gg/TwqVrAQq" target="_blank" rel="noopener noreferrer">Hyperacusis Support Discord Server</a> —
+      A friendly and supportive community of over 400 members where everyone feels welcome, valued, and heard. Members openly share their experiences and treatment outcomes, offer encouragement, and celebrate each other’s progress.
       </P>
       <p>
-      <a class="link" href="https://discord.gg/H3MqMv9X" target="_blank" rel="noopener noreferrer">Tinnitus Labs Discord Server</a>
-      </P>
+      <a class="link" href="https://discord.gg/H3MqMv9X" target="_blank" rel="noopener noreferrer">Tinnitus Labs Discord Server</a> —
+      A community of over 1,900 members focused on tinnitus and the treatment of tinnitus using a DIY adaptation of the Susan Shore device—originally developed at the University of Michigan but not commercially available. Members share treatment results and discuss related conditions such as hyperacusis, noxacusis, and TTTS in a collaborative and supportive environment.
+      </p>
+
+      
+      <div class="page-break" aria-hidden="true"></div>
+      <h1>Facebook</h1
+
+      <p>
+      <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk</a>  —
+      A community of over 1,300 members dedicated to the surgical management of hyperacusis, with a primary focus on the Silverstein procedure. Members exchange experiences, outcomes, and insights, offering support and guidance to individuals considering or recovering from surgical treatment.
+      </p>
+
+      <p>
+      <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" rel="noopener noreferrer">Middle Ear Myoclonus (MEM) Support Group</a> —
+      A community of over 2,000 members focused on middle ear myoclonus, where people share experiences, coping strategies, and treatment results. The group offers a safe, understanding space to discuss symptoms, therapies, and emerging research on this rare condition.
+      </p>
+
+      <p>
+      <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" rel="noopener noreferrer">Tonic Tensor Tympani Syndrome (TTTS) Support Group</a>  —
+      A community of over 2,300 members dedicated to tonic tensor tympani syndrome (TTTS). Members connect to exchange personal experiences, discuss treatment approaches, and support one another in managing symptoms. The group also serves as a valuable space for learning about emerging research and increasing awareness of this lesser-known condition.
+      </p>
     </article>
   </main>
 
