--- a/imaging.html
+++ b/imaging.html
@@ -60,6 +60,18 @@
         aggravate symptoms. Early CT imaging provides crucial information that can 
         guide management before hyperacusis becomes debilitating.
       </p>
+
+      <div class="page-break" aria-hidden="true"></div>
+       <h1>High-Resolution Temporal Bone CT Protocol</h1>
+<ul>
+  <li>Performed for evaluation of hyperacusis, noxacusis, TTTS, MEM, and tinnitus.</li>
+  <li>Ultra-thin slices (typically 0.5–0.6 mm) for high spatial resolution.</li>
+  <li>Reconstructions in axial and coronal planes; overlapping slices recommended.</li>
+  <li>Field of view focused on the temporal bones.</li>
+  <li>Non-contrast imaging is generally sufficient.</li>
+  <li>Multiplanar and 3D reconstructions can aid assessment of ossicles, cochlea and semicircular canals, and mastoid air cells.</li>
+  <li>Helps identify structural causes and supports both conservative and surgical management planning.</li>
+</ul>
     </article>
   </main>
 
