--- a/medications.html
+++ b/medications.html
@@ -47,8 +47,8 @@
         and reduce anxiety associated with sound sensitivity, though their use carries significant risks of dependence and withdrawal. 
       </p>
       <p>
-        Tricyclic antidepressants such as clomipramine and amitriptyline have been explored for their effects on central pain modulation 
-        and tinnitus, but responses vary, and side effects may outweigh benefits in sensitive individuals. 
+        Tricyclic antidepressants such as clomipramine, nortriptyline, and amitriptyline have been explored for their effects on central pain modulation 
+        and tinnitus, but responses vary, and side effects may outweigh benefits in sensitive individuals. Duloxetine, a serotonin-norepinephrine reuptake inhibitor (SNRI) has also been explored. 
       </p>
       <p>
         Anticonvulsants like gabapentin and pregabalin have also been prescribed for neuropathic-type auditory pain, with mixed results.
