--- a/mem.html
+++ b/mem.html
@@ -4,17 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyperacusis Guide -  MEM & TTTS</title>
+  
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" 
+        rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header>
     <h1 class="logo">
-    <i class="fa fa-compass"></i>
-    Hyperacusis Guide</h1>
+      <i class="fa fa-compass"></i>
+      Hyperacusis Guide
+    </h1>
     <button id="hamburger">&#9776;</button>
   </header>
 
@@ -41,21 +44,29 @@
       <h1>Middle Ear Myoclonus</h1>
 
       <p>
-        Middle ear myoclonus (MEM) involves involuntary, repetitive contractions of the tensor tympani and/or stapedius muscles, sometimes producing
-        audible clicking or thumping sounds perceived by the patient or even an examiner. Both conditions are thought to
-        arise from heightened central and peripheral auditory reflexes, often following acoustic trauma, stress, or
-        prolonged sound sensitivity. 
+        Middle ear myoclonus (MEM) involves involuntary, repetitive contractions of the tensor tympani and/or stapedius muscles, 
+        sometimes producing audible clicking or thumping sounds perceived by the patient or even an examiner. 
+        Both conditions are thought to arise from heightened central and peripheral auditory reflexes, often following 
+        acoustic trauma, stress, or prolonged sound sensitivity. 
       </p>
+
       <p>
         In individuals with hyperacusis or noxacusis, the auditory system becomes hypersensitized,
         and these protective reflexes can become maladaptive—firing excessively or continuously in response to normal
         environmental sounds. Over time, this can reinforce a cycle of pain, muscle tension, and heightened auditory gain,
         contributing to the persistence and severity of sound-induced discomfort.
       </p>
+
       <p>
-      The <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" rel="noopener noreferrer">middle ear myoclonus (MEM) support group</a> on Facebook offers a community where individuals can share their experiences, discuss symptoms, and explore treatment outcomes. It provides a space for members to connect with others facing similar challenges and to exchange valuable information about managing and understanding the condition.
+        The <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" 
+        rel="noopener noreferrer">Middle Ear Myoclonus (MEM) Support Group</a> on Facebook offers a community where 
+        individuals can share their experiences, discuss symptoms, and explore treatment outcomes. It provides a space 
+        for members to connect with others facing similar challenges and to exchange valuable information about managing 
+        and understanding the condition.
       </p>
+
       <div class="page-break" aria-hidden="true"></div>
+
       <h1>Tonic Tensor Tympani Syndrome</h1>
 
       <p>
@@ -63,14 +74,109 @@
         that can closely overlap with, or develop secondary to, hyperacusis and noxacusis. 
       </p>
 
-      <p>In TTTS, the tensor tympani
-        muscle—which normally contracts reflexively in response to loud sounds—becomes overactive or persistently tense,
-        often triggered by even moderate noises or anticipation of sound. This chronic contraction can cause sensations
-        of fullness, fluttering, pressure, or pain deep in the ear, and may exacerbate sound intolerance by increasing
-        mechanical tension on the eardrum and ossicles.
-      </p>
       <p>
-      The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" rel="noopener noreferrer">tonic tensor tympani support group</a> is a Facebook community which focuses on discussions, personal experiences, and treatment outcomes related to tonic tensor tympani syndrome (TTTS). This group provides a supportive environment where members can share insights, coping strategies, and information to help better understand and manage this complex condition.
+        In TTTS, the tensor tympani muscle—which normally contracts reflexively in response to loud sounds—becomes overactive 
+        or persistently tense, often triggered by even moderate noises or anticipation of sound. This chronic contraction can 
+        cause sensations of fullness, fluttering, pressure, or pain deep in the ear, and may exacerbate sound intolerance 
+        by increasing mechanical tension on the eardrum and ossicles.
+      </p>
+
+      <p>
+        The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" 
+        rel="noopener noreferrer">Tonic Tensor Tympani Syndrome Support Group</a> is a Facebook community which focuses on 
+        discussions, personal experiences, and treatment outcomes related to tonic tensor tympani syndrome (TTTS). This group 
+        provides a supportive environment where members can share insights, coping strategies, and information to help 
+        better understand and manage this complex condition.
+      </p>
+
+      <div class="page-break" aria-hidden="true"></div>
+
+      <h1>Differences Between MEM & TTTS</h1>
+
+      <p>
+        Tonic tensor tympani syndrome (TTTS) and middle ear myoclonus (MEM) are related but distinct conditions, 
+        and TTTS is <strong>not generally considered a form of MEM</strong>, though they both involve abnormal middle ear muscle activity.
+      </p>
+
+      <ul>
+        <li>
+          <strong>Middle Ear Myoclonus (MEM):</strong> Involves involuntary, rhythmic contractions of the middle ear muscles—
+          typically the <strong>stapedius</strong> and/or <strong>tensor tympani</strong>—that produce audible clicking 
+          or fluttering sounds in the ear. It is usually classified as a myoclonic disorder.
+        </li>
+        <li>
+          <strong>Tonic Tensor Tympani Syndrome (TTTS):</strong> Involves a <strong>sustained, non-rhythmic contraction</strong> 
+          of the <strong>tensor tympani</strong> muscle, often triggered by stress, anxiety, or loud sounds. Symptoms include 
+          ear fullness, tinnitus, or a sense of pressure, but it usually does <strong>not produce the rhythmic clicking</strong> 
+          characteristic of MEM.
+        </li>
+      </ul>
+
+      <p>
+        While both disorders involve the middle ear muscles, MEM is typically rhythmic and myoclonic, whereas TTTS is sustained and tonic. 
+        They are sometimes discussed together because they can coexist or produce overlapping symptoms, but TTTS is considered a separate clinical entity.
+      </p>
+
+      <p>
+        <strong>Tonic tensor tympani syndrome (TTTS) is more closely associated with hyperacusis and noxacusis</strong>, 
+        as sustained contraction of the tensor tympani muscle can amplify normal sounds, leading to heightened sound sensitivity and discomfort. 
+        Middle ear myoclonus (MEM), by contrast, often times occurs spontaneously without a preceding acoustic trauma and may be irritating 
+        but generally does not cause the widespread sound intolerance seen in TTTS.
+      </p>
+
+      <div class="page-break" aria-hidden="true"></div>
+
+      <h1>Conservative Management</h1>
+
+      <p> 
+        Conservative management of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS) focuses on non-surgical approaches 
+        to alleviate symptoms and improve quality of life. 
+      </p>
+      
+      <p>
+        Common strategies include sound therapy, counseling, stress reduction techniques, 
+        and the use of hearing protection or masking devices to minimize the perception of involuntary muscle contractions. Some patients 
+        benefit from muscle relaxation exercises, biofeedback, or medications aimed at reducing muscle hyperactivity or anxiety. These 
+        approaches are often tailored to the individual, emphasizing symptom management and functional improvement while avoiding 
+        the risks associated with surgical intervention.
+      </p>
+
+      <p>
+        Medications used for the treatment of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS) are generally aimed 
+        at reducing muscle hyperactivity, alleviating symptoms such as tinnitus and ear tension, and managing contributing factors 
+        like anxiety or stress. 
+      </p>
+      
+      <p>
+        Medications that have been tried include muscle relaxants, anti-anxiety agents, benzodiazepines, 
+        low-dose tricyclic antidepressants, and occasionally anticonvulsants. <strong>Extreme caution is advised when using medications</strong>, 
+        as symptom relief is often temporary, and there is a significant risk of developing dependency or other adverse effects. 
+        For this reason, pharmacologic therapy is typically considered an adjunct to other conservative or procedural treatments rather than a long-term solution.
+      </p>
+
+      <div class="page-break" aria-hidden="true"></div>
+
+      <h1>TVP Botox</h1>
+
+      <p>
+        The use of tensor veli palatini (TVP) Botox injections has emerged as a potential management option for tonic tensor tympani syndrome (TTTS) 
+        and related middle ear muscle disorders. By temporarily weakening the overactive muscles, Botox can reduce involuntary contractions, ear tension, 
+        and associated tinnitus or clicking. The procedure is minimally invasive and typically performed in a clinical setting, with effects 
+        lasting several weeks to months. While not a permanent solution, TVP Botox can provide symptomatic relief for patients who do not 
+        respond adequately to conservative therapies and may serve as a bridge to more definitive treatment options.
+      </p>
+
+      <div class="page-break" aria-hidden="true"></div>
+
+      <h1>Surgical Management</h1>
+
+      <p> 
+        The surgical management of middle ear myoclonus and tonic tensor tympani syndrome (TTTS) is typically considered for patients 
+        whose symptoms—such as pulsatile clicking, ear fullness, or tinnitus—are severe and unresponsive to conservative treatments. 
+        Procedures often involve selective sectioning/tenotomy or myectomy of the affected middle ear muscles, such as the tensor tympani or stapedius, 
+        to reduce involuntary contractions. Surgery requires careful evaluation by an experienced otologic surgeon, as it carries risks 
+        including hearing changes or persistent symptoms, but for appropriately selected patients, it can provide significant relief 
+        and improvement in quality of life.
       </p>
     </article>
   </main>
