--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </p>
 
       <p>
-        Understand your limits and do not risk exposure beyond them. Symptom worsening from overexposure can be difficult 
+        <strong><i>Know your limits and do not risk exposure beyond them.</i></strong> Symptom worsening from overexposure can be difficult 
         to recover from, and in some cases may lead to long-term or seemingly permanent effects.
       </p>
 
