--- a/tinnitus.html
+++ b/tinnitus.html
@@ -132,7 +132,7 @@ Each team member at Hyperacusis Guide suffers from some degree of hyperacusis, n
 </p>
 
 <p>
-In his 2004 book, <i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i>, Dr. Jastreboff suggests that individuals who do not respond to Tinnitus Retraining Therapy (TRT) may be inventing or exaggerating their symptoms to maintain disability benefits. On page 138, the book states the following:
+In his 2004 book, <i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i>, Dr. Jastreboff suggests that some patients who do not respond to TRT are "inventing or exaggerating" their symptoms to maintain disability benefits. On page 138, the book states the following:
 </p>
 
 <ul>
@@ -147,12 +147,12 @@ Subconsciously, the awareness that tinnitus distress may enhance any payments or
 </ul>
 </p>
 
-<p>While some individuals with hyperacusis or tinnitus may be eligible for short-term disability benefits through their employer, Social Security Disability Insurance (SSDI) does not recognize these conditions as qualifying disorders for long-term disability benefits.
-At Hyperacusis Guide, we are not aware of any cases in which an individual has successfully received SSDI benefits for hyperacusis or tinnitus.
+<p>In reality, while some individuals with hyperacusis or tinnitus may be eligible for short-term disability benefits through their employer if they become homebound, Social Security Disability Insurance (SSDI) does not recognize these conditions as qualifying disorders for long-term disability benefits.
+At Hyperacusis Guide, we are not aware of a single case in which an individual has successfully received SSDI benefits for hyperacusis or tinnitus.
 </p>
 
 <p>
-Unfortunately, because the severity of hyperacusis and tinnitus cannot be measured objectively with a diagnostic test and relies entirely on the patient’s subjective description, there is currently no way to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts"—such as Dr. Jastreboff—as there is no objective standard for comparison.
+Unfortunately, because the severity of hyperacusis and tinnitus cannot be measured objectively with a diagnostic test and relies entirely on the patient’s subjective description, it is impossible to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts"—such as Dr. Jastreboff—as there is no objective standard for comparison.
 </p>
 
 </article>
