--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>Precautionary Guide for New Hyperacusis Patients</h1>
 
       <p>
-        At Hyperacusis Guide, we respectfully disagree with the widespread narrative that isolating from sound will inevitably worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve.
+        At Hyperacusis Guide, we disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve.
       </p>
 
       <p>
