--- a/silverstein.html
+++ b/silverstein.html
@@ -81,9 +81,9 @@
       </p>
       <p>The <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk group</a> on Facebook features numerous real patient experiences and outcomes related to the Silverstein procedure. It serves as a valuable space where individuals discuss their results, recovery journeys, and insights, providing an authentic look into the effectiveness and challenges of this surgical approach.</p>
       <div class="page-break" aria-hidden="true"></div>
-       <h1>Finding a Physician Who Can Perform the Silverstein Procedure</h1>
+       <h1>Locating a Physician Who Can Perform the Silverstein Procedure</h1>
        <p>
-Finding a specialist qualified to perform the Silverstein procedure can be challenging, as only a limited number of surgeons have received training in this technique and severe hyperacusis sufferers may find traveling to be very difficult if not impossible. The <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation Fellowship Graduates</a> website provides a list of physicians who trained with Dr. Herbert Silverstein, along with a map of their locations; however, not all of these physicians necessarily perform the Silverstein procedure.
+Locating a specialist qualified to perform the Silverstein procedure can be challenging, as only a limited number of surgeons have received training in this technique. To further complicate matters, individuals with severe hyperacusis may have difficulty traveling, if they are able to travel at all. The <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation Fellowship Graduates</a> website provides a list of physicians who trained with Dr. Herbert Silverstein, along with a map of their locations; however, not all of these physicians necessarily perform the Silverstein procedure.
 </p>
       <div class="page-break" aria-hidden="true"></div>
        <h1>Physicians Who Have Expertise in the Silverstein Procedure</h1>
