--- a/community.html
+++ b/community.html
@@ -94,7 +94,10 @@
       <p>
       <a class="link" href="https://www.reddit.com/r/tinnitus/" target="_blank" rel="noopener noreferrer">Reddit - Tinnitus</a>
       </p>
-
+      <p>
+      <a class="link" href="https://www.tinnitustalk.com/" target="_blank" rel="noopener noreferrer">Tinnitus Talk Forums</a>
+      </p>      
+      
     </article>
   </main>
 
